--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^169.0.0",
     "mongoose": "^8.0.0",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0"
